--- a/webgpu-point-raster.html
+++ b/webgpu-point-raster.html
@@ -7,7 +7,7 @@
   <style>
     html, body { height: 100%; margin: 0; background:#222; color:#eee; font-family: Arial; }
     header { padding: 8px 12px; }
-    canvas { width: 100%; height: 100%; display: block; }
+    canvas { border: 1px solid #888; width: 512px; height: 512px; display: block; }
     .error { padding: 16px; color:#e66; }
   </style>
 </head>
@@ -15,13 +15,18 @@
     <header>
       <span>WebGPU point rasterization</span>
       <span id="gpu"></span>
-      <label style="margin-left:12px;">Points:
-        <input type="range" id="count" min="18" max="24" value="20" step="1">
-      </label>
-      <span id="countLabel" style="margin-left:8px;margin-right:8px;">--</span>
-      <label style="margin-left:12px;">Scale:
-        <input type="range" id="size" min="1" max="100" value="100" step="1">
-      </label>
+      <div>
+        <label">Points:
+          <input type="range" id="count" min="18" max="24" value="22" step="1">
+        </label>
+        <span id="countLabel">--</span>
+      </div>
+      <div>
+        <label>Scale:
+          <input type="range" id="size" min="1" max="100" value="80" step="1">
+        </label>
+        <span id="sizeLabel">--</span>
+      </div>
       <span id="fps">fps: --</span>
     </header>
     <canvas id="gfx"></canvas>
@@ -36,6 +41,7 @@
       const countSlider = document.getElementById('count');
       const countLabel  = document.getElementById('countLabel');
       const sizeSlider = document.getElementById('size');
+      const sizeLabel  = document.getElementById('sizeLabel');
 
       const adapter = await navigator.gpu.requestAdapter({ powerPreference: 'high-performance' });
       if (!adapter) throw new Error('No GPU adapter found.');
@@ -58,10 +64,10 @@
         context.configure({ device, format, alphaMode: 'opaque' });
       }
       configureContext();
-      window.addEventListener('resize', configureContext);
+      //window.addEventListener('resize', configureContext);
 
       const shader = /* wgsl */`
-struct Uniforms { time: f32, aspect: f32, n: f32, size: f32 };
+struct Uniforms { time: f32, n: f32, size: f32, pad: f32 };
 @group(0) @binding(0) var<uniform> uni : Uniforms;
 
 struct VSOut {
@@ -82,9 +88,9 @@ fn vsMain(@builtin(vertex_index) vid : u32) -> VSOut {
   let dy = 0.02 * sin(8.0 * v + uni.time * 0.7) * cos(5.0 * u - uni.time * 0.6);
 
   var out : VSOut;
-  out.pos = vec4f(((u + dx) / uni.aspect) * uni.size, (v + dy) * uni.size, 0.0, 1.0);
+  out.pos = vec4f((u + dx) * uni.size, (v + dy) * uni.size, 0.0, 1.0);
   let hue = fract((f32(vid) * 0.0008) + uni.time * 0.02);
-  out.color = vec4f(0.5 + abs(dx)*40, 0.5 + abs(dy)*40, 0.5, 1.0/(log2(uni.n)-8));
+  out.color = vec4f(0.5 + abs(dx)*40, 0.5 + abs(dy)*40, 0.5, 1.0/(log2(uni.n)-5));
   return out;
 }
 
@@ -123,7 +129,7 @@ fn fsMain(in : VSOut) -> @location(0) vec4f {
     });
 
     // Point count: 2^N points
-    let N = 20;
+    let N = 22;
     function setN(v) {
       N = Math.max(1, Math.floor(v));
       countLabel.textContent = (1<<N).toLocaleString();
@@ -131,27 +137,29 @@ fn fsMain(in : VSOut) -> @location(0) vec4f {
     setN(N);
     countSlider.addEventListener('input', (e) => setN(e.target.value));
 
-    let size = 100.0;
+    let size = 80.0;
     function setSize(v) {
       size = v;
+      sizeLabel.textContent = size + '%';
     }
+    setSize(size);
     sizeSlider.addEventListener('input', (e) => setSize(e.target.value));
 
-    let lastTime = 0;
     let lastUpdate = 0;
+    let updateCount = 0;
     function frame(tMS) {
       // FPS / time measurement
-      const dt = tMS - lastTime;
-      lastTime = tMS;
+      updateCount++;
       if (tMS - lastUpdate > 500) {
+        const dt = (tMS - lastUpdate) / updateCount;
         lastUpdate = tMS;
+        updateCount = 0;
         const fps = dt > 0 ? (1000 / dt).toFixed(1) : '--';
         fpsElem.textContent = `Time: ${dt.toFixed(1)} ms (${fps} FPS)`;
       }
 
       const time = tMS * 0.001; // seconds
-      const aspect = canvas.width / canvas.height;
-      const data = new Float32Array([time, aspect, Math.sqrt(1<<N), size / 100.0]);
+      const data = new Float32Array([time, Math.sqrt(1<<N), size / 100.0, 0.0]);
       device.queue.writeBuffer(uniformBuffer, 0, data.buffer);
 
       const encoder = device.createCommandEncoder();
