--- a/webgpu-point-raster.html
+++ b/webgpu-point-raster.html
@@ -5,17 +5,39 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WebGPU Point Rasterization</title>
   <style>
-    body { margin: 5px; font-family: Arial; }
-    canvas { border: 1px solid #888; width: 512px; height: 512px; display: block; }
+    body { font-family: Arial; max-width: 50em; margin: auto; background: #333; color: #eee; }
+    canvas { border: 1px solid #666; width: 512px; height: 512px; display: block; }
+    div { margin-top: 5px; }
+    p { margin: 0; margin-top: 5px; }
     table { border-collapse: collapse; }
     .error { padding: 16px; color:#e66; }
+    .help { border: 1px solid #555; background: #444; padding: 5px; }
   </style>
 </head>
 <body>
+    <h3>WebGPU point rasterization</h3>
+    <div class="help">
+      <p>
+      Render a deforming grid of <i>many</i> points, additively blending them.</p>
+      <p>
+      There's a checkbox to rasterize points with a compute shader; when it is off
+      the regular GPU point rasterization is used. Compute shader path is the most
+      naïve one: just do atomic writes to screen-sized R,G,B buffers, using fixed
+      point colors. There's a resolve pass at the end to turn that into display colors.
+      </p>
+      <p>
+      "Scale" control changes how spread out the points are on screen. It seems that
+      with small scale (i.e. <i>lots</i> of points overlapping on the same pixel),
+      there is quite a big drop in performance on some GPUs. The compute shader
+      path also gets slower, but not as drastically.
+      </p>
+      <p>
+      Buttons change the sliders to some pre-defined scenarios I was measuring.
+      </p>
+    </div>
     <p>
-      <span>WebGPU point rasterization</span>
-      <span id="gpu"></span>
-      <div id="toggle_compute"><input type="checkbox">Compute shader raster</input></div>
+      <div id="gpu"></div>
+      <div id="toggle_compute"><input type="checkbox">Use Compute Shader</input></div>
       <div>
         <button id="btn_1m_90">1M, 90%</button>
         <button id="btn_4m_90">4M, 90%</button>
@@ -42,7 +64,7 @@
 
     <script type="module">
       if (!('gpu' in navigator)) {
-        document.body.innerHTML = '<div class="error">Your browser does not support WebGPU. Try Chrome/Edge 113+ (desktop).</div>';
+        document.body.innerHTML = '<div class="error">Your browser does not support WebGPU.</div>';
         throw new Error('WebGPU is not supported');
       }
       const canvas = document.getElementById('gfx');
@@ -401,12 +423,16 @@ fn fsResolve(@builtin(position) fragCoord : vec4f) -> @location(0) vec4f {
   </script>
 
     <p>
-    Data gathered so far:
+    Data gathered so far is below. Each cell contains GPU time in milliseconds, for
+    regular GPU raster / compute shader raster.
+    </p>
+    <p>
     <table border="1">
-      <tr><th>System</th>       <th>1M, 90%</th><th>4M, 90%</th><th>16M, 90%</th><th>1M, 1%</th><th>4M, 1%</th><th>16M, 1%</th></tr>
-      <tr><td>RTX 3080Ti</td>   <td>1.6</td>    <td>5.3</td>    <td>6.5</td>    <td>5.7</td>    <td>9.2</td>  <td>37.7</td></tr>
-      <tr><td>Apple M4 Max</td> <td>2.1</td>    <td>4.4</td>    <td>14.6</td>   <td>21.8</td>   <td>87.4</td> <td>351.0</td></tr>
-      <tr><td>iPhone 16 Pro</td><td>8.4</td>    <td>35.4</td>   <td>66.2</td>   <td>24.7</td>   <td>103.5</td> <td>510.3</td></tr>
+      <tr><th>System</th>       <th>1M, 90%</th>  <th>4M, 90%</th>  <th>16M, 90%</th>   <th>1M, 1%</th>     <th>4M, 1%</th>     <th>16M, 1%</th></tr>
+      <tr><td>RTX 3080Ti</td>   <td>1.3 / 0.8</td><td>5.3 / 3.1</td><td>6.4 / 5.3</td>  <td>5.7 / 2.3</td>  <td>9.2 / 3.9</td>  <td>37.7 / 6.2</td></tr>
+      <tr><td>Apple M4 Max</td> <td>1.7 / 0.2</td><td>4.5 / 0.8</td><td>12.4 / 4.8</td> <td>21.8 / 2.5</td> <td>87.4 / 10.2</td><td>351.0 / 15.2</td></tr>
+      <tr><td>Apple M1 Max</td> <td>1.3 / 0.5</td><td>4.9 / 2.9</td><td>11.1 / 10.8</td> <td>15.6 / 2.9</td> <td>62.5 / 10.2</td><td>250.3 / 28.0</td></tr>
+      <tr><td>Intel Iris Xe</td><td>4.4 / 3.6</td><td>12.5 / 10.6</td><td>68.4 / 35.3</td> <td>12.9 / 11.1</td> <td>44.7 / 22.8</td><td>228.3 / 119.2</td></tr>
     </table>
     </p>
 
