--- a/webgpu-point-raster.html
+++ b/webgpu-point-raster.html
@@ -8,10 +8,12 @@
     body { font-family: Arial; max-width: 50em; margin: auto; background: #333; color: #eee; }
     canvas { border: 1px solid #666; width: 512px; height: 512px; display: block; }
     div { margin-top: 5px; }
-    p { margin: 0; margin-top: 5px; }
+    p { margin: 0; margin: 5px 0px; }
     table { border-collapse: collapse; }
+    th { background: #222; }
     .error { padding: 16px; color:#e66; }
     .help { border: 1px solid #555; background: #444; padding: 5px; }
+    .center { text-align: center; }
   </style>
 </head>
 <body>
@@ -428,12 +430,27 @@ fn fsResolve(@builtin(position) fragCoord : vec4f) -> @location(0) vec4f {
     </p>
     <p>
     <table border="1">
-      <tr><th>System</th>       <th>1M, 90%</th>  <th>4M, 90%</th>  <th>16M, 90%</th>   <th>1M, 1%</th>     <th>4M, 1%</th>     <th>16M, 1%</th></tr>
+      <tr><th>GPU</th>       <th>1M, 90%</th>  <th>4M, 90%</th>  <th>16M, 90%</th>   <th>1M, 1%</th>     <th>4M, 1%</th>     <th>16M, 1%</th></tr>
+      <tr><th colspan="7" class="center">NVIDIA</th></tr>
+      <tr><td>RTX 5070Ti</td>   <td>0.2 / 0.0</td><td>1.0 / 0.1</td><td>4.8 / 0.7</td>  <td>1.6 / 0.0</td>  <td>6.8 / 0.1</td>  <td>28.5 / 0.2</td></tr>
+      <tr><td>RTX 4080</td>     <td>0.8 / 0.1</td><td>1.2 / 0.6</td><td>5.3 / 1.2</td>  <td>1.6 / 0.3</td>  <td>7.2 / 1.1</td>  <td>27.3 / 3.7</td></tr>
       <tr><td>RTX 3080Ti</td>   <td>1.3 / 0.8</td><td>5.3 / 3.1</td><td>6.4 / 5.3</td>  <td>5.7 / 2.3</td>  <td>9.2 / 3.9</td>  <td>37.7 / 6.2</td></tr>
-      <tr><td>Apple M4 Max</td> <td>1.7 / 0.2</td><td>4.5 / 0.8</td><td>12.4 / 4.8</td> <td>21.8 / 2.5</td> <td>87.4 / 10.2</td><td>351.0 / 15.2</td></tr>
-      <tr><td>Apple M1 Max</td> <td>1.3 / 0.5</td><td>4.9 / 2.9</td><td>11.1 / 10.8</td> <td>15.6 / 2.9</td> <td>62.5 / 10.2</td><td>250.3 / 28.0</td></tr>
-      <tr><td>Intel Iris Xe</td><td>4.4 / 3.6</td><td>12.5 / 10.6</td><td>68.4 / 35.3</td> <td>12.9 / 11.1</td> <td>44.7 / 22.8</td><td>228.3 / 119.2</td></tr>
-    </table>
+      <tr><td>RTX 4070 laptop</td><td>2.9 / 0.3</td><td>5.9 / 3.3</td><td>10.3 / 6.5</td>  <td>10.0 / 1.2</td>  <td>12.6 / 5.0</td>  <td>33.7 / 14.1</td></tr>
+      <tr><td>RTX 4060</td>     <td>6.8 / 1.9</td><td>8.4 / 6.8</td><td>10.0 / 6.1</td>  <td>8.5 / 2.9</td>  <td>7.0 / 6.9</td>  <td>28.2 / 7.5</td></tr>
+      <tr><td>GTX 1060</td>     <td>1.8 / 0.4</td><td>9.0 / 3.2</td><td>15.7 / 6.1</td>  <td>6.8 / 0.5</td>  <td>10.4 / 2.6</td>  <td>41.9 / 8.9</td></tr>
+      <tr><th colspan="7" class="center">Apple</th></tr>
+      <tr><td>M4 Max</td> <td>1.7 / 0.2</td><td>4.5 / 0.8</td><td>12.4 / 4.8</td> <td>21.8 / 2.5</td> <td>87.4 / 10.2</td><td>351.0 / 15.2</td></tr>
+      <tr><td>M1 Max</td> <td>1.3 / 0.5</td><td>4.9 / 2.9</td><td>11.1 / 10.8</td> <td>15.6 / 2.9</td> <td>62.5 / 10.2</td><td>250.3 / 28.0</td></tr>
+      <tr><td>M3</td>     <td>2.9 / 1.0</td><td>5.1 / 2.3</td><td>23.1 / 8.0</td>  <td>22.0 / 4.1</td> <td>89.0 / 8.4</td><td>340.3 / 20.5</td></tr>
+      <tr><td>A18 Pro (iPhone 16 Pro)</td><td>10.5 / 6.6</td><td>13.1 / 10.4</td><td>61.5 / 15.8</td> <td>33.8 / 18.9</td> <td>102.5 / 17.1</td><td>432.7 / 55.4</td></tr>
+      <tr><th colspan="7" class="center">Intel</th></tr>
+      <tr><td>Iris Xe</td><td>4.4 / 3.6</td><td>12.5 / 10.6</td><td>68.4 / 35.3</td> <td>12.9 / 11.1</td> <td>44.7 / 22.8</td><td>228.3 / 119.2</td></tr>
+      <tr><th colspan="7" class="center">ARM</th></tr>
+      <tr><td>Mali-G78 MP20 (Pixel 6)</td><td>6.8 / 2.0</td><td>13.8 / 6.5</td><td>7.1 / 11.5</td> <td>102.6 / 7.7</td> <td>452.2 / 15.8</td><td>? / ?</td></tr>
+    </table>    
+    </p>
+    <p>
+    Thanks to Robin van Ee, Jak Boulton, Andrew Willmott, Marcel Wiessler, @Geegaz, @Professor_Stevens, @vfig for providing some of the above results!
     </p>
 
 </body>
