--- a/webgpu-point-raster.html
+++ b/webgpu-point-raster.html
@@ -36,6 +36,11 @@
       <p>
       Buttons change the sliders to some pre-defined scenarios I was measuring.
       </p>
+      <p>
+      ⚠️ Note: it looks like for some people Firefox is reporting incorrect GPU timings (they are about 10x
+      lower than they should be). Chrome/Chromium based browsers might give more consistent
+      results at this point.
+      </p>
     </div>
     <p>
       <div id="gpu"></div>
