--- a/webgpu-point-raster.html
+++ b/webgpu-point-raster.html
@@ -123,7 +123,7 @@
       //window.addEventListener('resize', configureContext);
 
       const shader = /* wgsl */`
-struct Uniforms { time: f32, n: f32, size: f32, pad0: f32, width: u32, height: u32, total: u32, pad2: u32 };
+struct Uniforms { time: f32, n: f32, size: f32, alpha: f32, width: u32, height: u32, total: u32, pad2: u32 };
 @group(0) @binding(0) var<uniform> uni : Uniforms;
 
 struct VSOut {
@@ -153,7 +153,7 @@ fn vsMain(@builtin(vertex_index) vid : u32) -> VSOut {
 
   var out : VSOut;
   out.pos = vec4f((u + dx) * uni.size, (v + dy) * uni.size, 0.0, 1.0);
-  out.color = saturate(vec4f(0.5 + abs(dx)*40, 0.5 + abs(dy)*40, 0.5, 1.0/(log2(uni.n)-5)));
+  out.color = saturate(vec4f(0.2 + abs(dx)*80, 0.2 + abs(dy)*80, 0.1, uni.alpha));
   return out;
 }
 
@@ -185,7 +185,7 @@ fn csMain(@builtin(global_invocation_id) gid : vec3<u32>) {
 
   let idx : u32 = u32(y) * uni.width + u32(x);
 
-  let col : vec4f = saturate(vec4f(0.5 + abs(dx)*40, 0.5 + abs(dy)*40, 0.5, 1.0/(log2(uni.n)-5)));
+  let col : vec4f = saturate(vec4f(0.2 + abs(dx)*80, 0.2 + abs(dy)*80, 0.1, uni.alpha));
   let col_r = u32(col.r * col.a * 255.0 + 0.5);
   let col_g = u32(col.g * col.a * 255.0 + 0.5);
   let col_b = u32(col.b * col.a * 255.0 + 0.5);
@@ -365,7 +365,8 @@ fn fsResolve(@builtin(position) fragCoord : vec4f) -> @location(0) vec4f {
       }
 
       const time = tMS * 0.001; // seconds
-      device.queue.writeBuffer(uniformBuffer, 0, new Float32Array([time, Math.sqrt(1<<N), size / 100.0, 0.0]));
+      const alpha = Math.max(1.0/(N-17) * size / 100.0, 2.0/255.0);
+      device.queue.writeBuffer(uniformBuffer, 0, new Float32Array([time, Math.sqrt(1<<N), size / 100.0, alpha]));
       device.queue.writeBuffer(uniformBuffer, 16, new Uint32Array([canvas.width, canvas.height, 1<<N, 0]));
 
       const encoder = device.createCommandEncoder();
