--- a/webgpu-point-raster.html
+++ b/webgpu-point-raster.html
@@ -444,7 +444,9 @@ regular GPU raster and compute shader raster.
   <tr><th colspan="13" class="center">NVIDIA</th></tr>
   <tr><td>RTX 5070Ti</td>               <td>0.2</td>  <td>0.0</td>    <td>1.0</td>  <td>0.1</td>    <td>4.8</td>  <td>0.7</td>    <td>1.6</td> <td>0.0</td>   <td>6.8</td>  <td>0.1</td>  <td>28.5</td> <td>0.2</td></tr>
   <tr><td>RTX 4080</td>                 <td>0.8</td>  <td>0.1</td>    <td>1.2</td>  <td>0.6</td>    <td>5.3</td>  <td>1.2</td>    <td>1.6</td> <td>0.3</td>   <td>7.2</td>  <td>1.1</td>  <td>27.3</td> <td>3.7</td></tr>
+  <tr><td>RTX 3090</td>                 <td>0.7</td>  <td>0.2</td>    <td>2.0</td>  <td>1.1</td>    <td>7.5</td>  <td>2.1</td>    <td>2.5</td> <td>0.9</td>   <td>10.1</td> <td>0.9</td>  <td>38.6</td> <td>4.9</td></tr>
   <tr><td>RTX 3080Ti</td>               <td>1.3</td>  <td>0.8</td>    <td>5.3</td>  <td>3.1</td>    <td>6.4</td>  <td>5.3</td>    <td>5.7</td> <td>2.3</td>   <td>9.2</td>  <td>3.9</td>  <td>37.7</td> <td>6.2</td></tr>
+  <tr><td>RTX 4070</td>                 <td>1.0</td>  <td>0.5</td>    <td>1.7</td>  <td>1.2</td>    <td>7.3</td>  <td>2.3</td>    <td>1.7</td> <td>0.5</td>   <td>2.1</td>  <td>1.5</td>  <td>26.5</td> <td>6.2</td></tr>
   <tr><td>RTX 3070Ti</td>               <td>1.2</td>  <td>0.8</td>    <td>2.4</td>  <td>1.4</td>    <td>7.8</td>  <td>2.5</td>    <td>2.6</td> <td>1.3</td>   <td>10.3</td> <td>2.3</td>  <td>40.3</td> <td>5.4</td></tr>
   <tr><td>RTX 4070 laptop</td>          <td>2.9</td>  <td>0.3</td>    <td>5.9</td>  <td>3.3</td>    <td>10.3</td> <td>6.5</td>    <td>10.0</td><td>1.2</td>   <td>12.6</td> <td>5.0</td>  <td>33.7</td> <td>14.1</td></tr>
   <tr><td>RTX 4060</td>                 <td>6.8</td>  <td>1.9</td>    <td>8.4</td>  <td>6.8</td>    <td>10.0</td> <td>6.1</td>    <td>8.5</td> <td>2.9</td>   <td>7.0</td>  <td>6.9</td>  <td>28.2</td> <td>7.5</td></tr>
@@ -458,8 +460,10 @@ regular GPU raster and compute shader raster.
   <tr><td>RX 6950 XT</td>               <td>0.9</td>  <td>0.2</td>    <td>4.1</td>  <td>1.0</td>    <td>6.5</td>  <td>4.0</td>    <td>4.3</td> <td>3.1</td>   <td>15.5</td> <td>4.8</td>  <td>62.0</td> <td>9.4</td></tr>
   <tr><td>RX 9060 XT</td>               <td>0.8</td>  <td>0.1</td>    <td>3.3</td>  <td>0.3</td>    <td>13.3</td> <td>1.9</td>    <td>4.6</td> <td>1.2</td>   <td>14.4</td> <td>2.4</td>  <td>58.2</td> <td>9.8</td></tr>
   <tr><td>RX 7800 XT</td>               <td>1.0</td>  <td>0.1</td>    <td>6.1</td>  <td>0.4</td>    <td>14.5</td> <td>0.9</td>    <td>9.5</td> <td>0.9</td>   <td>17.7</td> <td>4.2</td>  <td>71.1</td> <td>12.5</td></tr>
+  <tr><td>RX 6600 XT</td>               <td>1.2</td>  <td>0.3</td>    <td>4.6</td>  <td>1.6</td>    <td>10.7</td> <td>4.8</td>    <td>4.7</td> <td>2.3</td>   <td>15.2</td> <td>4.8</td>  <td>60.8</td> <td>10.9</td></tr>
   <tr><th colspan="13" class="center">Apple</th></tr>
   <tr><td>M4 Max</td>                   <td>1.7</td>  <td>0.2</td>    <td>4.5</td>  <td>0.8</td>    <td>12.4</td> <td>4.8</td>    <td>21.8</td><td>2.5</td>   <td>87.4</td> <td>10.2</td> <td>351.0</td><td>15.2</td></tr>
+  <tr><td>M2 Max</td>                   <td>1.9</td>  <td>0.3</td>    <td>5.0</td>  <td>1.3</td>    <td>18.4</td> <td>9.5</td>    <td>14.6</td><td>3.4</td>   <td>58.8</td> <td>9.6</td>  <td>234.5</td><td>25.1</td></tr>
   <tr><td>M1 Max</td>                   <td>1.3</td>  <td>0.5</td>    <td>4.9</td>  <td>2.9</td>    <td>11.1</td> <td>10.8</td>   <td>15.6</td><td>2.9</td>   <td>62.5</td> <td>10.2</td> <td>250.3</td><td>28.0</td></tr>
   <tr><td>M3</td>                       <td>2.9</td>  <td>1.0</td>    <td>5.1</td>  <td>2.3</td>    <td>23.1</td> <td>8.0</td>    <td>22.0</td><td>4.1</td>   <td>89.0</td> <td>8.4</td>  <td>340.3</td><td>20.5</td></tr>
   <tr><td>A18 Pro</td>                  <td>10.5</td> <td>6.6</td>    <td>13.1</td> <td>10.4</td>   <td>61.5</td> <td>15.8</td>   <td>33.8</td><td>18.9</td>  <td>102.5</td><td>17.1</td> <td>432.7</td><td>55.4</td></tr>
@@ -467,13 +471,17 @@ regular GPU raster and compute shader raster.
   <tr><th colspan="13" class="center">Intel</th></tr>
   <tr><td>Iris Xe</td>                  <td>4.4</td>  <td>3.6</td>    <td>12.5</td> <td>10.6</td>   <td>68.4</td> <td>35.3</td>   <td>12.9</td><td>11.1</td>  <td>44.7</td> <td>22.8</td> <td>228.3</td><td>119.2</td></tr>
   <tr><td>Alder Lake GT2</td>           <td>2.9</td>  <td>3.8</td>    <td>24.5</td> <td>10.4</td>   <td>191.5</td><td>60.6</td>   <td>53.1</td><td>7.4</td>   <td>213.8</td><td>12.8</td> <td>858.3</td><td>41.5</td></tr>
-  <tr><td>gen-12lp</td>                 <td>3.1</td>  <td>6.3</td>    <td>24.2</td> <td>12.8</td>   <td>156.0</td><td>78.2</td>   <td>15.4</td><td>12.6</td>  <td>70.0</td> <td>49.8</td> <td>280.0</td><td>199.0</td></tr>
+  <tr><td>gen-12lp (i9-14900HX)</td>    <td>3.1</td>  <td>6.3</td>    <td>24.2</td> <td>12.8</td>   <td>156.0</td><td>78.2</td>   <td>15.4</td><td>12.6</td>  <td>70.0</td> <td>49.8</td> <td>280.0</td><td>199.0</td></tr>
+  <tr><td>gen-12lp (i5-12450H)</td>     <td>6.5</td>  <td>4.2</td>    <td>37.1</td> <td>18.8</td>   <td>160.4</td><td>109.1</td>  <td>23.1</td><td>4.8</td>   <td>99.0</td> <td>14.1</td> <td>406.1</td><td>45.3</td></tr>
   <tr><td>gen-12lp (i7-11800H)</td>     <td>12.4</td> <td>7.9</td>    <td>45.1</td> <td>19.9</td>   <td>193.9</td><td>111.5</td>  <td>18.4</td><td>8.5</td>   <td>78.9</td> <td>11.6</td> <td>79.3</td> <td>10.6</td></tr>
   <tr><td>UHD 730</td>                  <td>8.1</td>  <td>5.5</td>    <td>47.5</td> <td>22.5</td>   <td>200.0</td><td>116.5</td>  <td>18.8</td><td>5.7</td>   <td>47.7</td> <td>21.7</td> <td>330.0</td><td>36.5</td></tr>
   <tr><th colspan="13" class="center">ARM</th></tr>
   <tr><td>G715s MC10 (Pixel 8 Pro)</td> <td>8.3</td>  <td>3.2</td>    <td>17.2</td> <td>6.1</td>    <td>92.6</td><td>15.6</td>    <td>34.3</td><td>5.1</td>   <td>112.9</td><td>13.6</td> <td>469.1</td><td>53.1</td></tr>
-  <tr><td>G78 MP20 (Pixel 6)</td>       <td>6.8</td>  <td>2.0</td>    <td>13.8</td> <td>6.5</td>    <td>57.1</td><td>11.5</td>    <td>102.6</td><td>7.7</td>  <td>452.2</td><td>15.8</td> <td>?</td>    <td>?</td></tr>
+  <tr><td>G78 MP20 (Pixel 6)</td>       <td>6.8</td>  <td>2.0</td>    <td>13.8</td> <td>6.5</td>    <td>57.1</td><td>11.5</td>    <td>21.8</td><td>7.7</td>   <td>102.6</td><td>15.8</td> <td>452.2</td><td>54.2</td></tr>
+  <tr><td>G715 MP7 (Pixel 9)</td>       <td>5.5</td>  <td>2.1</td>    <td>15.5</td> <td>4.6</td>    <td>75.4</td><td>19.2</td>    <td>25.8</td><td>3.8</td>   <td>106.2</td><td>15.1</td> <td>429.3</td><td>50.3</td></tr>
   <tr><td>G710 MP7 (Pixel 7a)</td>      <td>10.2</td> <td>7.3</td>    <td>18.2</td> <td>9.0</td>    <td>69.7</td><td>13.7</td>    <td>14.5</td><td>8.0</td>   <td>78.2</td> <td>13.0</td> <td>394.0</td><td>52.8</td></tr>
+  <tr><th colspan="13" class="center">Qualcomm</th></tr>
+  <tr><td>Adreno X1-85</td>             <td>2.4</td>  <td>1.4</td>    <td>12.8</td> <td>4.7</td>    <td>57.8</td><td>20.1</td>    <td>9.4</td> <td>2.7</td>   <td>38.0</td> <td>11.4</td> <td>174.4</td><td>63.9</td></tr>
 </table>    
 </p>
 <p>
@@ -481,6 +489,7 @@ Thanks to:
 @ascentress,
 Andrew Willmott,
 Arseny Kapoulkine,
+Benji Smith,
 Brandon Jones,
 @Gargaj,
 @Geegaz,
@@ -488,12 +497,15 @@ Brandon Jones,
 @horenmar,
 Jak Boulton,
 Javier Arevalo,
+@kolyasisan,
 Marcel Wiessler,
+Mārtiņš Možeiko,
 Mikko Mononen,
 @NohatCoder,
 @Professor_Stevens,
 Robin van Ee,
 @rokups,
+Sascha Willems,
 @scoopr,
 Simen Storsveen,
 Simon Rolfmore,
